<resources>
    <string name="app_name">CookMaster</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="return_to_homepage">return to homepage</string>
    <string name="click_for_a_surprise">click for a surprise</string>
    <string name="popup_titre">Question ?</string>
    <string name="popup_message">Do you really want to leave the app ?</string>
    <string name="popup_oui">Yes</string>
    <string name="popup_non">No</string>
    <string name="login_cookmaster">Login CookMaster 🍔</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="hi">Welcome to Cook Master app!</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="subscription">Subscription :</string>
    <string name="formation">Formation:</string>
    <string name="description">Description:</string>
    <string name="there_is_a_surprise_here">There is a surprise here !</string>
    <string name="link">Link :</string>
    <string name="date">Date :</string>
    <string name="with_date">With Date</string>
    <string name="with_no_date">With No Date</string>
    <string name="all">All</string>
</resources>